test/integration/bad/new/print-bad5.stan
transformed data {
    print(1:10);
}
